hphp/test/zend/good/ext/calendar/tests/jdtogregorian.php
<?php
echo jdtogregorian(0). "\n";
echo jdtogregorian(2298874). "\n";
echo jdtogregorian(2299151). "\n";
echo jdtogregorian(2440588). "\n";
echo jdtogregorian(2816423). "\n";
?>