hphp/test/zend/bad/ext/session/tests/bug60860.php
<?php

session_start();
echo "ok\n";

?>